fix scrollbar width

--- a/src/index.css
+++ b/src/index.css
@@ -14,15 +14,7 @@
   margin: 0;
   padding: 0;
 }
-/* 
-a {
-  font-weight: 500;
-  text-decoration: none;
-} */
 
-/* body {
-  margin: 0;
-  min-width: 320px;
-  min-height: 100vh;
-  font-family: "Montserrat", sans-serif;
-} */
+html {
+  overflow-y: scroll;
+}
